# dry-testing-engine

./: .gitignore  Cargo.toml  INVESTIGATION_AND_BENCHMARKING_PLAN.md  ISSUE_ANALYSIS.md  POOL_REUSE_ANALYSIS.md  README.md  testdbschema.txt
benches/: coordinator.rs  execution_lanes.rs  state_machine.rs
src/: lib.rs  main.rs
src/coordinator/: coordinator.rs  mod.rs  timing.rs
src/core/: mod.rs  sequence.rs
src/db/: mod.rs  writer.rs
src/execution/: engine.rs  executor.rs  lane.rs  metrics.rs  mod.rs  router.rs
src/intent_generator/: config.rs  database.rs  errors.rs  generator.rs  mod.rs
src/recovery/: mod.rs  recovery.rs
src/routing/: mod.rs  router.rs
src/state_machine/: events.rs  machine.rs  mod.rs
src/types/: database.rs  errors.rs  execution.rs  fixed_point.rs  mod.rs  order.rs  venue.rs
src/venue/: adapter.rs  mod.rs  simulator.rs
tests/: connection_tracker.rs  connection_tracking_example.rs  end_to_end.rs  intent_generator.rs  routing.rs  sequence.rs  state_machine.rs  types.rs  venue_simulator.rs
tests/integration/: coordinator.rs  end_to_end.rs  execution_lanes.rs  mod.rs  state_machine.rs
tests/unit/: fixed_point.rs  mod.rs  routing.rs  sequence.rs  state_machine.rs  venue_simulator.rs
