[package]
name = "dry-testing-engine"
version = "0.1.0"
edition = "2021"
authors = ["PolyEdge Team"]
description = "Dry testing engine for execution lanes and order state machine"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "migrate"] }
rust_decimal = { version = "1.33", features = ["serde-with-str", "db-postgres"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Concurrent data structures
dashmap = "5.5"

# Channel for bounded queues
tokio-stream = "0.1"
futures = "0.3"

# Random number generation (for venue simulator)
rand = "0.8"

# Statistics and distributions (for venue simulator)
statrs = "0.16"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.12"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "state_machine"
harness = false

[[bench]]
name = "coordinator"
harness = false

